# seismic

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.md  MAINTENANCE.md  README.md  README_PY.md  Rebasing.md  justfile  launch_all_cocondenser_grid.sh  launch_all_inference_less_grid.sh  launch_all_scan_test.sh  launch_all_spladev3_grid.sh  pyproject.toml  test_baseline_streamvbyte_dataset.sh  test_compression_codecs.sh  test_partitioned_dataset.sh
.claude/commands/: check_python_retrocompatibility.md  release.md
.github/workflows/: maturin_publish.yml
benches/: get_with_offset_iter_bench.rs
design_choices/: json_interface.md
docs/: BestResults.md  Guidelines.md  Installation.md  PythonUsage.md  ReplicateResults.md  RunExperiments.md  RustUsage.md  TomlInstructions.md
examples/: DotVByteIndex.ipynb  HandsOnSeismic.ipynb  LargeVocabulary.ipynb  RAG.ipynb  ReadListExperiments.ipynb  SeismicGuide.ipynb
examples/.ipynb_checkpoints/: ReadListExperiments-checkpoint.ipynb  SeismicGuide-checkpoint.ipynb
examples/toy_dataset/: documents.jsonl  queries.jsonl
experiments/: cocondenser_test_kmeans_inverted_index.toml  cocondenser_test_kmeans_inverted_index_approx.toml  cocondenser_test_kmeans_random.toml  splade_cocondenser_ms_marco_v2_ecir.toml  splade_cocondenser_ms_marco_v2_ecir_1.5_60k_knn_0.toml  splade_cocondenser_ms_marco_v2_ecir_mem_bud_2.0_100k_knn_0.toml  splade_cocondenser_ms_marco_v2_ecir_mem_bud_2.0_90k_knn_0.toml
experiments/best_configs/msmarco-v1/efficient-splade/mem_budget_1.25/: recall_90.toml  recall_91.toml  recall_92.toml  recall_94.toml  recall_95.toml  recall_96.toml  recall_97.toml  recall_98.toml
experiments/best_configs/msmarco-v1/efficient-splade/mem_budget_1.5/: recall_92.toml  recall_93.toml  recall_94.toml  recall_95.toml  recall_96.toml  recall_97.toml  recall_98.toml  recall_99.toml
experiments/best_configs/msmarco-v1/efficient-splade/mem_budget_2.0/: recall_90.toml  recall_91.toml  recall_92.toml  recall_93.toml  recall_94.toml  recall_95.toml  recall_96.toml  recall_97.toml  recall_98.toml  recall_99.toml
experiments/best_configs/msmarco-v1/splade-cocondenser/mem_budget_0.9/: recall_90.toml  recall_91.toml  recall_92.toml  recall_93.toml  recall_94.toml  recall_95.toml  recall_96.toml  recall_97.toml
experiments/best_configs/msmarco-v1/splade-cocondenser/mem_budget_1.0/: recall_90.toml  recall_91.toml  recall_92.toml  (+6 more)
experiments/cikm2024/: cocondenser_no_knn_mem_budget_1.5.toml  cocondenser_no_knn_mem_budget_2.0.toml  cocondenser_with_knn_mem_budget_1.5.toml  cocondenser_with_knn_mem_budget_2.0.toml  spladev3_no_knn_mem_budget_1.5.toml  spladev3_no_knn_mem_budget_2.0.toml  spladev3_with_knn_mem_budget_1.5.toml  spladev3_with_knn_mem_budget_2.0.toml
experiments/dev/: base_index_f32_mb_1.5_recall90.toml  cocondenser_no_knn_mem_budget_1.5_f16.toml  cocondenser_no_knn_mem_budget_1.5_f16_partitioned.toml  cocondenser_no_knn_mem_budget_1.5_fixedu8.toml  partitioned_index_f32_mb_1.5_recall90.toml
experiments/ecir2026/cocondenser/: baseline_streamvbyte_f16.toml  baseline_streamvbyte_f8.toml  compression_f16.toml  compression_f8.toml  f16.toml  f8.toml  partitioned_f16.toml  partitioned_f8.toml  streamvbyte.toml  streamvbyte_f16.toml  streamvbyte_f8.toml
experiments/ecir2026/inference_less_big/: baseline_streamvbyte_f16.toml  baseline_streamvbyte_f8.toml  compression_f16.toml  compression_f8.toml  f16.toml  f8.toml  partitioned_f16.toml  partitioned_f8.toml  streamvbyte.toml  streamvbyte_f16.toml  streamvbyte_f8.toml  streamvbyte_merge.toml  test_binary_search.toml
experiments/ecir2026/spladev3/: baseline_streamvbyte_f16.toml  baseline_streamvbyte_f8.toml  compression_f16.toml  compression_f8.toml  f16.toml  f8.toml  partitioned_f16.toml  partitioned_f8.toml  streamvbyte_f16.toml  streamvbyte_f8.toml
experiments/grid_searches/: evaluation_building_algorithms.toml  evaluation_building_algorithms_msmarco_v1.toml  evaluation_building_algorithms_msmarco_v2.toml  example_grid_search.toml  grid_search_msmarco_v1_cocondenser.toml  grid_search_msmarco_v1_cocondenser_partitioned.toml  grid_search_msmarco_v1_efficientsplade.toml  grid_search_msmarco_v1_spladev3.toml  grid_search_msmarco_v1_splare.toml  grid_search_msmarco_v2_cocondenser.toml  log.txt
experiments/sigir2024/: efficient-splade.toml  nq.toml  splade.toml  unicoil-t5.toml
experiments/testing_coi/: cocondenser_no_knn_mem_budget_1.5.toml
scripts/: CheckResults.ipynb  ComponentCompressionResults.ipynb  ExtractResutsGridSearch.ipynb  GenerateGridSearch.ipynb  GetResultsFromGridSearch.ipynb  HandsOnSeismic.ipynb  Notebook.ipynb  PlotCocondenser.ipynb  PlotComponentDistribution.ipynb  Quantization.ipynb  SeismicGuide.ipynb  TestingDatasetInterface.ipynb  accuracy.py  compare_results.py  compute_accuracy_and_mrr.py  convert_json_to_inner_format.py  extract_results.py  find_best_grid_results_by_recall_range.py  gather_grid_search_results.py  grid_search.sh  grid_search_only_accuracy.sh  recall.py  requirements.txt  run_experiment.py  run_experiments.py  run_grid_search.py  search_python.py
scripts/Notebooks/: DumpBestConfiguration.ipynb  ExtractResutsGridSearch.ipynb
src/: compressed_dataset.rs  configurations.rs  distances.rs  elias_fano.rs  index_traits.rs  inverted_index.rs  inverted_index_wrapper.rs  json_utils.rs  lib.rs  num_marker.rs  posting_list.rs  quantized_dataset_uniform.rs  quantized_summary.rs  space_usage.rs  sparse_dataset.rs  sparse_dataset_wrapper.rs  topk_selectors.rs  utils.rs
src/baseline_streamvbyte_dataset/: dataset.rs
src/elias_fano/: tests.rs
src/libbin/: build_inverted_index.rs  convert_inverted_index.rs  match_cv_macros.rs  mod.rs  perf_inverted_index.rs
src/partitioned_dataset/: dataset.rs  fitting_integer.rs  mod.rs  utils.rs
src/pylib/: dataset.rs  dotvbyte.rs  mod.rs
src/stream_vbyte_dataset/: dataset.rs  dataset.rs.rej  dataset_fixedu16.rs  dataset_fixedu8.rs  mod.rs  stream_vbyte.rs  stream_vbyte_fixedu16.rs  stream_vbyte_fixedu8.rs  swizzle.rs
src/streamvbyte_dataset/: dataset.rs
src/topk_selectors/: heap_faiss.rs
(+116 files in other folders)
