[package]
name = "seismic"
version = "0.3.5"
edition = "2024"
license = "MIT"
description = "Seismic is designed for effective and efficient KNN retrieval over learned sparse embeddings."
repository = "https://github.com/TusKANNy/seismic"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["prefetch"]
partitioned-dataset = []
prefetch = []
pyo3 = ["dep:pyo3", "dep:numpy"]

[lib]
name = "seismic"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "lib"]

[[bin]]
name = "convert_inverted_index_partitioned"
path = "src/bin/convert_inverted_index_partitioned.rs"
required-features = ["partitioned-dataset"]

[[bin]]
name = "perf_inverted_index_partitioned"
path = "src/bin/perf_inverted_index_partitioned.rs"
required-features = ["partitioned-dataset"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
bytemuck = { version = "1.23", features = ["min_const_generics"] }
compressed-intvec = { version = "0.5", features = [
    "serde",
    "arch-dependent-storable",
] }
clap = { version = "4.5", features = ["derive"] }
co_sort = "0.2"
envparse = "0.1"
rayon = "1.11"
# TODO: f16 available in nightly, but not supported by crates: https://github.com/rust-num/num-traits/pull/333
half = { version = "2.6", features = [
    "bytemuck",
    "serde",
    "std",
    "num-traits",
] }
# TODO: use upstream when https://gitlab.com/tspiteri/fixed/-/issues/69 is fixed
# If it's not getting fixed, prefer using a git patch when https://github.com/rust-lang/cargo/issues/4648 is fixed
fixed = { git = "https://gitlab.com/tinozzo123/fixed", branch = "fast_to_f32_hack", features = [
    "num-traits",
    "serde",
] }
num-traits = "0.2"
itertools = "0.14"
rand = "0.9"
rand_chacha = "0.9"
metis = "0.2"
pyo3 = { version = "0.26", features = ["extension-module"], optional = true }
numpy = { version = "0.26", optional = true }
indicatif = { version = "0.18", features = ["rayon"] }

ndarray = "0.16"
ndarray-npy = "0.9"

serde_json = "1.0"

flate2 = "1.1"
tar = "0.4"
rustc-hash = "2.1.1"
toolkit = { git = "https://github.com/rossanoventurini/toolkit.git", branch = "streamvbyte" }
mem_dbg = "0.3.0"

rgb = { git = "https://github.com/JMMackenzie/enhanced-graph-bisection.git" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "perf_inverted_index"
path = "src/bin/perf_inverted_index.rs"

[profile.release]
lto = true

[[bench]]
name = "get_with_offset_iter_bench"
harness = false
